# heatshield

./: Cargo.toml  README.md  prior-art.md
scripts/: setup.txt
src/: parse-crates-io-dump.rs  unsafe-sitter.rs
