[package]
name = "heatshield"
authors = ["Tim McNamara <tim@mcnamara.nz>"]
version = "0.0.1"
edition = "2021"
description = "Unsafe code research project"
license = "BlueOak-1.0.0"
repository = "https://github.com/timClicks/heatshield"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", default-features = false, features = ["full", "parsing", "printing"] }
prettyplease = "0.2"

# using tree-sitter because it has a good query syntax
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
csv = "1.3.0"
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
serde = { version = "1.0.193", features = ["derive"] }
tempfile = "3.8.1"

[[bin]]
name = "unsafe-sitter"
path = "src/unsafe-sitter.rs"

[[bin]]
name = "parse-crates-io-dump"
path = "src/parse-crates-io-dump.rs"
